--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="gallery_tab">Gallery</string>
     <string name="settings_tab">Settings</string>
     <string name="permission_toast">All necessary permissions are granted</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 </resources>
